// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagInput rendering renders expected elements 1`] = `
<Layer
  className="TagInput"
  id="test-tags"
  onClick={[Function]}
>
  <span
    className="TagInput__tag"
  >
    foo
    <button
      aria-label="Remove foo"
      className="TagInput__remove"
      data-index={0}
      type="button"
    >
      <SvgIcon
        icon={
          {
            "icon": [],
            "iconName": "xmark-thin",
          }
        }
      />
    </button>
  </span>
  <span
    className="TagInput__tag"
  >
    bar
    <button
      aria-label="Remove bar"
      className="TagInput__remove"
      data-index={1}
      type="button"
    >
      <SvgIcon
        icon={
          {
            "icon": [],
            "iconName": "xmark-thin",
          }
        }
      />
    </button>
  </span>
  <input
    className="TagInput__input"
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when error is set 1`] = `
<Layer
  className="TagInput TagInput--error"
  id="test-tags"
  onClick={[Function]}
>
  <span
    className="TagInput__tag"
  >
    foo
    <button
      aria-label="Remove foo"
      className="TagInput__remove"
      data-index={0}
      type="button"
    >
      <SvgIcon
        icon={
          {
            "icon": [],
            "iconName": "xmark-thin",
          }
        }
      />
    </button>
  </span>
  <span
    className="TagInput__tag"
  >
    bar
    <button
      aria-label="Remove bar"
      className="TagInput__remove"
      data-index={1}
      type="button"
    >
      <SvgIcon
        icon={
          {
            "icon": [],
            "iconName": "xmark-thin",
          }
        }
      />
    </button>
  </span>
  <input
    className="TagInput__input"
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when tags is empty and defaultTags is not set 1`] = `
<Layer
  className="TagInput"
  id="test-tags"
  onClick={[Function]}
>
  <input
    className="TagInput__input"
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when tags is empty and defaultTags is set 1`] = `
<Layer
  className="TagInput"
  id="test-tags"
  onClick={[Function]}
>
  <span
    className="TagInput__defaultTag"
  >
    foo
  </span>
  <span
    className="TagInput__defaultTag"
  >
    bar
  </span>
  <input
    className="TagInput__input"
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;
